Expose the Ivy cache folder from the docker containers and cleaning up DEV scripts